--- a/vscode-themes/vscode-aurora-nocturne/package.json
+++ b/vscode-themes/vscode-aurora-nocturne/package.json
@@ -2,12 +2,14 @@
   "name": "nexus-continuum",
   "displayName": "Nexus Continuum Themes",
   "description": "A unified VS Code theme pack containing both Nocturne Nexus (dark) and Aurora Nexus (light), built on a shared orbital accent and semantic system.",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "publisher": "KB4ptiste",
   "engines": {
     "vscode": "^1.80.0"
   },
-  "categories": ["Themes"],
+  "categories": [
+    "Themes"
+  ],
   "icon": "media/nexus-continuum-icon.png",
   "galleryBanner": {
     "color": "#271E32",
@@ -21,7 +23,6 @@
     "url": "https://github.com/KB4ptiste/Nexus-Continuum/issues"
   },
   "license": "MIT",
-
   "contributes": {
     "themes": [
       {
